changes in description

--- a/src/components/landing/Footer.astro
+++ b/src/components/landing/Footer.astro
@@ -73,14 +73,13 @@
       <div class="gap-x-8 gap-y-6 mt-6">
         <div>
           <p class="text-sm text-gray-600 lg:col-span-2">
-            Qreate is not affiliated with Stripe, Breeew, Astro, or Tailwind
-            Labs, nor is it endorsed or sponsored by them. Designed and built by
+            Qreate is a Website Agency that provides a Web Service And development of Website
             <a
               href="https://michaelandreuzza.com/"
               class="text-sm text-black hover:text-accent-300"
-              >Michael Andreuzza</a
-            >, this website was crafted using Astro & Tailwind CSS. Crafted in
-            Åland Islands, Finland.
+              >Qreate</a
+            >,UI Designer and Front end Developer Team. I
+            also build Website For People. Learn more.
           </p>
         </div>
       </div>
