--- a/src/components/landing/Intro.astro
+++ b/src/components/landing/Intro.astro
@@ -10,11 +10,7 @@
   <div class="bg-blue-400 rounded-3xl p-8 text-xl text-white">
     <div class="space-y-4">
       <p>
-        Qreate focuses on building exceptional landing pages and UI components
-        using AstroJS and Tailwind CSS for businesses aiming to enhance their
-        web presence. Benefit from unlimited builds under a straightforward
-        monthly subscription, ensuring direct and hassle-free communication with
-        Qreate.
+        Qreate specializes in building exceptional landing pages and websites for businesses looking to enhance their web presence. Benefit from our competitive pricing for each project, ensuring direct and hassle-free communication with Qreate. Get a professionally designed website tailored to your needs.
       </p>
     </div>
     <div
