--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -47,7 +47,7 @@
           x-ref="container1"
         >
           <div class="text-base text-gray-600 pb-8 pt-0">
-            My name is Michael Andreuzza, UI Designer and Front end Developer. I
+             We are Qreate, UI Designer and Front end Developer Team. I
             also build products for myself. Learn more <a
               class="text-accent-500 hover:text-black"
               href="#">here</a
