--- a/src/components/landing/How.astro
+++ b/src/components/landing/How.astro
@@ -11,10 +11,7 @@
     </div>
     <div>
       <p class="text-2xl text-black mt-8 xl:text-xl">
-        Once you join, you and your crew get an invite to Qreate's Breeew kanban
-        board, where you can team up with minimal in real-time. From here, you
-        can chat directly with minimal, shooting over as many design requests as
-        you fancy.
+        you and your team can discuss your website requirements directly with Qreate over a call. You'll have the opportunity to explain your vision and preferences, and we will ensure your website is built within your specified time frame. Enjoy seamless communication and a website tailored to your needs.
       </p>
     </div>
   </div>
